--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,21 @@
 {
-  "name": "내 웹앱",
-  "short_name": "웹앱",
-  "start_url": "/pwa-demo/index.html",
-  "scope": "/pwa-demo/",
+  "name": "쿠팡 바로가기",
+  "short_name": "쿠팡",
+  "start_url": "https://link.coupang.com/a/c1MqNQ",
+  "scope": "/pwa-cp/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
+  "background_color": "#FFFFFF",
+  "theme_color": "#0078FF",
   "icons": [
-    { "src": "/pwa-demo/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/pwa-demo/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/pwa-cp/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/pwa-cp/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
