--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "쿠팡 바로가기",
   "short_name": "쿠팡",
-  "start_url": "https://www.coupang.com/?utm_source=homescreen",
+  "start_url": "/pwa-cp/launch.html?go=1",
   "display": "browser",
   "background_color": "#FFFFFF",
   "theme_color": "#0078FF",
